--- a/MyShop/MyShop.WebUI/Views/Basket/Index.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Basket/Index.cshtml
@@ -19,7 +19,7 @@
             @Html.DisplayNameFor(model => model.Price)
         </th>
         <th>
-            
+            Line Total
         </th>
         <th></th>
     </tr>
@@ -42,7 +42,7 @@
             @String.Format("{0:c}", item.Price * item.Quantity)
         </td>
         <td>
-            <a href="@Url.Action("RemoveFromBasket", "Basket", new { Id = item.id })" class="btn btn-danger">Delete</a>
+            <a href="@Url.Action("RemoveFromBasket", "Basket", new { Id = item.Id })" class="btn btn-danger">Delete</a>
         </td>
     </tr>
 }
